# fixepub

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: flake_update.yml  test.yml
src/: cli.rs  encoding_matcher.rs  epub.rs  error.rs  lib.rs  main.rs
tests/: cli.rs
