[package]
name = "fixepub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
indicatif = "0.18.0"
nom = "8.0.0"
scraper = "0.24.0"
xmltree = "0.11.0"
zip = "6.0.0"

[dev-dependencies]
assert_cmd = "2.1"
tempfile = "3.13"
