[package]
name = "fixepub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
nom = "8.0.0"
scraper = "0.26.0"
xmltree = "0.12.0"
zip = "8.4.0"

[dev-dependencies]
assert_cmd = "2.2"
tempfile = "3.27"
